search/nick.css
body {
  font-family: Arial, sans-serif;
  background-color: #F0F2F5;

}

#container {
  width: 1150px;
  margin: 0 auto;
  background-color: #FFF;
  border-bottom-left-radius: 5px;
  border-bottom-right-radius: 5px;
}

#footer {
  width: 1150px;
  margin: 0 auto;
}

.welcome-text {
  float: right;
  margin: 10px 30px 0 0;
}

.navbar
{
  height: 60px;
  line-height: 60px;
  vertical-align: middle;
  background-color: #1a1717;
  padding-left: 9%;
  border-top-left-radius: 5px;
  border-top-right-radius: 5px;
}

.navbar-upper
{
  padding-right: 1%;
  padding-left: 1%;
  display: inline-block;
}

.navbar-upper h1 {
margin-right: 0px;
margin-left: 0px;
color: #5bb75b;
display: table-cell;
vertical-align: center;
text-align: left;
}

.navbar-lower
{
  vertical-align: top;
  line-height: 60px;
  display: inline-block;
  padding-right: 10px;
  padding-left: 10px;
  font-size: 18px;
  margin-left: 5px;
}

.navbar-item
{
  margin-right: auto;
  vertical-align: top;
  line-height: 60px;
  display: inline-block;
  padding-right: 10px;
  padding-left: 10px;
  font-size: 18px;
  margin-left: 5px;
}

.navbar-item a
{
  text-decoration: none;
  color: white;
}

.navbar-item a:hover
{
  color: #5bb75b;
}

.main {
  max-width: 929px;
  float: left;
  padding:15px;
  border-bottom-left-radius: 5px;
  border-right: solid 1px #A6A6A6;
}

.main h3 {
  margin: 0 0 5px 0;
}

.side {
  padding:15px;
  border-bottom-right-radius: 5px;
  width: 160px;
  float: left;
  text-align: center;
}

.side h3 {
  margin: 0 0 15px 0;
}

.box-container {
  padding-top: 20px;
}

.box {
  width: 273px;
  border: solid 1px #CCC;
  float: left;
  padding: 5px;
  margin: 0 10px 10px 10px;
}

.box img {
  display: block;
  margin: 0 0 10px 0;
  width: 272px;
  height: 165px;
}

.ns-image {
  border: solid 1px #A6A6A6;
  padding: 5px;
  width: 273px;
  height: 182px;;
  margin: 10px;
}

.ns-btn {
	padding: 5px 15px;
	font-size:14px;
	color: #ffffff;
	border: solid 1px #4A924A;
	background: #5bb75b;
  border-radius: 5px;
}

.hr-image hr {
  margin: -7px 0 4px 0;
  background-color: #009900;
  color: #009900;
  border:none;
  height: .11em;
}

.btn-right {
  float: right;
  border-radius: 2px;
}

.btn-left {
  float: left;
  border-radius: 2px;
}

.ns-btn-search {
  margin: 0 5px 0 -6px;
  border-top-left-radius: 0;
  border-bottom-left-radius: 0px;
}

.ns-btn-savesearch {
/*leave empty do not delete*/
}

.btn-comments {
  padding: 5px 10px;
  color: #ffffff;
  border: solid 1px #4A924A;
  background: #5bb75b;
  border-radius: 2px;
  color: #51A451;
  background: #FFF;
  font-size: 12px;
  border: 2px solid;
}

.btn-comments:hover {
  background: #E0E0E0 ;
}

.btn-ss {
  padding: 5px 15px;
  color: #ffffff;
  border: solid 1px #4A924A;
  background: #5bb75b;
  border-radius: 2px;

  color: #51A451;
  font-weight: bold;
  background: #FFF;
  font-size: 15px;
  border: 2px solid;
}

.btn-ss:hover {
  background: #F0F0F0 ;
}

.ns-btn:hover {
		background: #51A451;
}

.itemlist button {
  margin-bottom: 10px;
}

.ns-textinput {
	padding: 5px 10px;
	font-size: 14px;
	border: 1px solid #BDBDBD;
	border-top-left-radius: 15px;
  border-bottom-left-radius: 15px;
}

.alert {
  position: absolute;
  font-size: 18px;
  font-weight: 400;
  border-bottom-left-radius: 5px;
  border-bottom-right-radius: 5px;
  margin: 0 auto;
  width: 450px;
  top: 0;
  left: 0;
  right: 0;
  text-align: center;
  padding: 10px;
  overflow: hidden;
}

.alert-red {
  color: white;
  background-color: #A80000;
  border: 1px solid #A80000;
}

.alert-green {
  color: white;
  background-color: #3c763d;
  border: 1px solid #3c763d;
}

.clearfix:after {
    content: ".";
    display: block;
    height: 0;
    clear: both;
    visibility: hidden;
}

.center-text {
  margin: 0 0 5px 10px;
  font-size: 14px;
}

